# sfml-flecs-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json
Core/: CMakeLists.txt
Core/Private/: Core.cpp
Core/Public/Core/Components/: Transform.h
Main/: CMakeLists.txt
Main/Source/: Configuration.h  Main.cpp
Main/TestBed/: CMakeLists.txt
Source/: CMakeLists.txt  Main.cpp
include/: CMakeLists.txt
include/core/components/: CircleRenderable.h
src/: CMakeLists.txt  main.cpp
